# dots-ev-chargingstation-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-image.yml
src/ExampleCalculationService/: EConnection.py
src/evservice/: evservice.py
test/: TestEvService.py  TestTemplate.py  test.esdl
